# Drink_bot

./: .env  .gitignore  Cargo.toml  db.sqlite  docker-compose.yml
.github/workflows/: check.yml
bar_bot/: Cargo.toml  docker-compose.yml
bar_bot/.github/workflow/: check.yml
bar_bot/db/: db.sqlite
bar_bot/src/: config.rs  main.rs
bar_bot/src/cocktails_api/schemas/: drink.rs
bar_bot/src/cocktails_api/services/: mod.rs
bar_bot/src/telegramm/: mod.rs
bar_bot/src/telegramm/buttons/: mod.rs
bar_bot/src/telegramm/commands/: func.rs  mod.rs
bar_bot/src/utils/: helpers.rs  mod.rs
db/: db.sqlite
localization/: en.json  ukr.json
src/: config.rs  lib.rs  main.rs
src/cocktails_api/: mod.rs
src/cocktails_api/schemas/: drink.rs  ingredient.rs  lists.rs  mod.rs
src/cocktails_api/services/: coctail_service.rs
src/coctails_api/: mod.rs
src/coctails_api/schemas/: drink.rs  ingredient.rs  lists.rs  mod.rs
src/coctails_api/services/: coctail_service.rs  mod.rs
src/error/: error_handler.rs
src/localization/: lang.rs  mod.rs  schemas.rs
src/telegramm/: mod.rs  state.rs
src/telegramm/buttons/: callback_handler.rs  keyboard.rs  mod.rs
src/telegramm/commands/: command.rs  func.rs
src/telegramm/messages/: message_handler.rs
src/telegramm/settings/: mod.rs  settings.rs
src/utils/: helpers.rs  mod.rs  read_file.rs  str_builder.rs  unicod.rs
suggestion_bags/: suggestion.txt
