[package]
name = "Bar_Bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.10.1", features = ["full"] }
reqwest = { version = "0.11.11", features = ["blocking"] }
serde = "1.0.143"
tokio = { version = "1.3.0", features = ["rt-multi-thread", "macros"] }
serde_with = "2.0.0"
url = "2.2.2"
serde_json = "1.0.83"
itertools = "0.10.3"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
envy = "0.4.2"
log = "0.4.17"
image = "0.24.3"
rand = "0.8.5"
lazy_static = "1.4.0"
macroses = { git = "ssh://git@github.com/FilippFromKR/Note_bot.git", branch = "master" }
